# curvy

./: Cargo.toml  LICENSE.txt  README.md
cli/: Cargo.toml
cli/src/: main.rs  opts.rs
client/: Cargo.toml
client/src/: lib.rs
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs
program/src/instruction/: generated.rs
program/src/processor/: mod.rs
program/src/state/: curve.rs  mod.rs  utils.rs
utils/: Cargo.toml
utils/src/: lib.rs
