[workspace]
members = ["cli", "client", "program", "utils"]
resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[workspace.dependencies]
serde = "1"
serde_json = "1.0"
serde_with = "3.0"
spl-associated-token-account = "3.0"
spl-token = "4.0"
spl-token-2022 = "3.0"
texture-common = { git = "ssh://git@git.tx-int.net/solana/common.git", rev = "ae9d28a" }
