[package]
name = "curvy-cli"
version = "0.1.3"
edition = "2021"
publish = false

[[bin]]
name = "curvy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
csv = "1.3.0"
curvy = { path = "../program", features = ["no-entrypoint", "with-serde"] }
curvy-client = { path = "../client" }
curvy-utils = { path = "../utils" }
derive_more = "0.99"
dirs-next = "2"
future-utils = "0.12"
futures = "0.3"
humantime = "2"
rust_decimal = "1.33.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-client = { version = "1.18" }
solana-sdk = { version = "1.18" }
structopt = "0.3"
texture-common = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
