[package]
name = "curvy-client"
version = "0.1.3"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
curvy = { path = "../program", features = ["no-entrypoint", "with-serde"] }
solana-client = { version = "1.18" }
solana-sdk = { version = "1.18" }
texture-common = { workspace = true, features = ["serde", "account-loaders"] }
tracing = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
display_json = "0.2"
