[package]
name = "curvy"
version = "0.1.3"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

with-serde = [
    "chrono/serde",
    "serde",
    "serde_json",
    "serde_with",
    "texture-common/serde",
]

[dependencies]
borsh = "1.5"
bytemuck = "1.14"
chrono = { version = "0.4", optional = true }
derive_more = "0.99"
# dev-utils = { path = "../dev-utils" }
num_enum = "0.7"
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
solana-program = { version = "1.18" }
spl-token = { workspace = true }
static_assertions = "1.1"
texture-common = { workspace = true }
thiserror = "1"
